--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
         </div>
       </section>
     </div>
+
+    <div class="socials">
     <section>
-    
-    </section>
+        <p>Redes sociales</p>
+        
+        <a href="linkedin"><img src="" alt="LinkedIn" /></a>
+        <a href="https://github.com/BrianJaen"><img src="" alt="Github" /></a>
+      </section>
+    </div>
   </body>
 </html>
