--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         
         <a href="linkedin"><img src="" alt="LinkedIn" /></a>
         <a href="https://github.com/BrianJaen"><img src="" alt="Github" /></a>
+        <p>Prueba</p>
       </section>
     </div>
   </body>
