--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>CV Brian Jaén Medina</title>
+    <title>brianjaen</title>
   </head>
   <body>
     <div class="hed">
@@ -30,10 +30,8 @@
     <div class="socials">
     <section>
         <p>Redes sociales</p>
-        
-        <a href="linkedin"><img src="" alt="LinkedIn" /></a>
+        <a href="https://es.linkedin.com/in/brian-ja%C3%A9n-medina-513272252"><img src="" alt="LinkedIn" /></a>
         <a href="https://github.com/BrianJaen"><img src="" alt="Github" /></a>
-        <p>Prueba</p>
       </section>
     </div>
   </body>
