--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
       </section>
     </div>
 
-    <div class="socials">
+    <!-- <div class="socials">
     <section>
         <p>Redes sociales</p>
         <a href="https://es.linkedin.com/in/brian-ja%C3%A9n-medina-513272252"><img src="" alt="LinkedIn" /></a>
         <a href="https://github.com/BrianJaen"><img src="" alt="Github" /></a>
       </section>
-    </div>
-    <p>Prueba </p>
+    </div> -->
   </body>
 </html>
