--- a/index.html
+++ b/index.html
@@ -3,36 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>brianjaen</title>
+    <title>devw1n.github.io</title>
   </head>
   <body>
-    <div class="hed">
-      <section>
-        <div>
+    <div class="fir">
+      <div class="main">
+        <section>
           <table>
             <th>
-              <img
-                src="./img/foto-git.png"
-                alt="Imagen de Brian"
-                width="180px"
-                height="160px"
-              />
+              <img src="./img/foto_brian.png" alt="Imagen de Brian" />
             </th>
             <th>
               <h1>Hola! Soy Brian👋🏻</h1>
-              <p>Estudiante de Desarrollo de Aplicaciones Web.</p>
+              <p>
+                Estudiante de Desarrollo de Aplicaciones Web <br />
+                y programación.
+              </p>
             </th>
           </table>
-        </div>
-      </section>
+        </section>
+      </div>
+      <div class="socials">
+        <!-- Centrar bien esta parte de la pagina de la seccion
+          e intentar que la pagina este centrda con el div principal
+          y tambien encontrar un remedio par la linea 14-17 para 
+          que tenga mas sentido el div -->
+        <section>
+          <p>Redes sociales</p>
+          <div>
+            <!-- Linkedin -->
+            <a
+              href="https://es.linkedin.com/in/brian-ja%C3%A9n-medina-513272252"
+              target="_blank"
+              class="icons"
+              ><img decoding="async" src="./img/Linkedin.png" alt="Linkedin"
+            /></a>
+            <!-- Github -->
+            <a href="https://github.com/devw1n" target="_blank" class="icons"
+              ><img decoding="async" src="./img/Github.png" alt="Github"
+            /></a>
+            <!-- Instagram -->
+            <a
+              href="https://www.instagram.com/devw1n"
+              target="_blank"
+              class="icons"
+              ><img decoding="async" src="./img/Instagram.png" alt="Github"
+            /></a>
+          </div>
+        </section>
+      </div>
+      <div>
+        <footer>
+          <!-- poner aqui mi nombre como pie de pagina -->
+        </footer>
+      </div>
     </div>
-
-    <!-- <div class="socials">
-    <section>
-        <p>Redes sociales</p>
-        <a href="https://es.linkedin.com/in/brian-ja%C3%A9n-medina-513272252"><img src="" alt="LinkedIn" /></a>
-        <a href="https://github.com/BrianJaen"><img src="" alt="Github" /></a>
-      </section>
-    </div> -->
   </body>
 </html>
