--- a/index.html
+++ b/index.html
@@ -24,25 +24,18 @@
         </section>
       </div>
       <div class="socials">
-        <!-- Centrar bien esta parte de la pagina de la seccion
-          e intentar que la pagina este centrda con el div principal
-          y tambien encontrar un remedio par la linea 14-17 para 
-          que tenga mas sentido el div -->
         <section>
           <p>Redes sociales</p>
           <div>
-            <!-- Linkedin -->
             <a
               href="https://es.linkedin.com/in/brian-ja%C3%A9n-medina-513272252"
               target="_blank"
               class="icons"
               ><img decoding="async" src="./img/Linkedin.png" alt="Linkedin"
             /></a>
-            <!-- Github -->
             <a href="https://github.com/devw1n" target="_blank" class="icons"
               ><img decoding="async" src="./img/Github.png" alt="Github"
             /></a>
-            <!-- Instagram -->
             <a
               href="https://www.instagram.com/devw1n"
               target="_blank"
@@ -52,6 +45,7 @@
           </div>
         </section>
       </div>
+      <!-- poner un sobre mi tambien básico para darme a conocer tambien un poco más -->
       <div>
         <footer>
           <!-- poner aqui mi nombre como pie de pagina -->
