--- a/index.html
+++ b/index.html
@@ -1,56 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>devw1n.github.io</title>
-  </head>
-  <body>
-    <div class="fir">
-      <div class="main">
-        <section>
-          <table>
-            <th>
-              <img src="./img/foto_brian.png" alt="Imagen de Brian" />
-            </th>
-            <th>
-              <h1>Hola! Soy Brian👋🏻</h1>
-              <p>
-                Estudiante de Desarrollo de Aplicaciones Web <br />
-                y programación.
-              </p>
-            </th>
-          </table>
-        </section>
-      </div>
-      <div class="socials">
-        <section>
-          <p>Redes sociales</p>
-          <div>
-            <a
-              href="https://es.linkedin.com/in/brian-ja%C3%A9n-medina-513272252"
-              target="_blank"
-              class="icons"
-              ><img decoding="async" src="./img/Linkedin.png" alt="Linkedin"
-            /></a>
-            <a href="https://github.com/devw1n" target="_blank" class="icons"
-              ><img decoding="async" src="./img/Github.png" alt="Github"
-            /></a>
-            <a
-              href="https://www.instagram.com/devw1n"
-              target="_blank"
-              class="icons"
-              ><img decoding="async" src="./img/Instagram.png" alt="Github"
-            /></a>
-          </div>
-        </section>
-      </div>
-      <!-- poner un sobre mi tambien básico para darme a conocer tambien un poco más -->
-      <div>
-        <footer>
-          <!-- poner aqui mi nombre como pie de pagina -->
-        </footer>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" type="text/css" href="index.css" />
+  <title>devw1n.github.io</title>
+</head>
+
+<body>
+  <div class="fir">
+    <div class="main">
+      <section>
+        <table>
+          <th>
+            <img src="./img/foto_brian.png" alt="Imagen de Brian" />
+          </th>
+          <th>
+            <h1>Hola! Soy Brian👋🏻</h1>
+            <p>
+              &lt;Estudiante de Desarrollo de Aplicaciones Web <br />
+              y programación.&gt;
+            </p>
+          </th>
+        </table>
+      </section>
     </div>
-  </body>
+    <div class="socials">
+      <section>
+        <p>&lt;Redes sociales&gt;</p>
+        <div>
+          <a href="https://es.linkedin.com/in/brian-ja%C3%A9n-medina-513272252" target="_blank" class="icons"><img
+              decoding="async" src="./img/Linkedin.png" alt="Linkedin" /></a>
+          <a href="https://github.com/devw1n" target="_blank" class="icons"><img decoding="async" src="./img/Github.png"
+              alt="Github" /></a>
+          <a href="https://www.instagram.com/devw1n" target="_blank" class="icons"><img decoding="async"
+              src="./img/Instagram.png" alt="Github" /></a>
+        </div>
+      </section>
+    </div>
+    <div class="aboutMe">
+      <section>
+        <p class="me">&lt;Sobre mi&gt;</p>
+        <p>&lt;¡Buenas!, tengo 21 años y actualmente soy estudiante de Desarrollo de aplicaciones web. 
+          Hice un curso formativo de grado medio de sistemas microinformáticas y redes. Mi objetivo 
+          es ser desarrollador fronted en mis primeros años, pero, en un futuro, optar por ser 
+          desarrollador fullstack.&gt;</p>
+      </section>
+    </div>
+  </div>
+</body>
 </html>
