--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       <section>
         <p class="me">&lt;Sobre mi&gt;</p>
         <p>&lt;¡Buenas!, tengo 21 años y actualmente soy estudiante de Desarrollo de aplicaciones web. 
-          Hice un curso formativo de grado medio de sistemas microinformáticas y redes. Mi objetivo 
-          es ser desarrollador fronted en mis primeros años, pero, en un futuro, optar por ser 
-          desarrollador fullstack.&gt;</p>
+          <br>Hice un curso formativo de grado medio de sistemas microinformáticas y redes. Mi objetivo 
+          es ser desarrollador Frontend en mis primeros años, pero en un futuro optar por ser 
+          desarrollador Fullstack&gt;</p>
       </section>
     </div>
   </div>
